--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Example Application</title>
-    <link rel="stylesheet" href="bootstrap.min.css"></link>
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
   </head>
   <body>
     <div id="root"></div>
