--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/"
       crossorigin="anonymous"
     ></script>
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
